# halado_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TASK.md  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
include/: bimap0.hpp  bimap1.hpp  bimap2.hpp
src/: CMakeLists.txt  bimap0.cpp  bimap1.cpp  main.cpp
test/: CMakeLists.txt  section0_tests.hpp  section1_tests.hpp  section2_tests.hpp  sut.hpp  test_main.cpp
test/original_tests/: f0.hpp  f1.hpp  f2.hpp
